--- a/VRChat/07/1353507.html
+++ b/VRChat/07/1353507.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "0Oin4YK1x1rIDM7PgwRJ4Oh+ONnRdFNA8W1FxGjoMrM="></script>
+    "wCzYqjnC6geJWfiFq4OVOhKeu0PZ/EW0K9cPYqUyyp8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け/無料配布】会議机","description":"イベントなどでよく見る机のモデルです。\nVRChatで利用する場合付属のプレハブを使うかスケールを0.4倍ぐらいに調整してご利用ください。\n\n\n● セット内容 ●\nテクスチャ\n机のプレハブ\n机のモデル\n\n● できること ●\n本モデルの改造\n本モデルの商用利用\nR-18/R-18G作品への利用\n\n\n● できないこと ●\n本モデルの再配布\n\n● 著作権について ●\n本モデルの著作権及び改変されたモデルの著作権はta3に帰属するものとします。\n\n","url":"https://booth.pm/ja/items/1353507","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"140"},"image":"https://booth.pximg.net/c/620x620/880cf89f-fa01-4384-a8aa-8742d5a8f71d/i/1353507/941e2b32-0c05-46d1-8f8e-2b3f27840bf2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0Oin4YK1x1rIDM7PgwRJ4Oh+ONnRdFNA8W1FxGjoMrM="></script>
+    nonce="wCzYqjnC6geJWfiFq4OVOhKeu0PZ/EW0K9cPYqUyyp8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -426,9 +426,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
