--- a/VRChat/04/1352804.html
+++ b/VRChat/04/1352804.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "D8FNoLWduTzHc/SgYNRL3RU4i34IOugHJzfiuyWskZ8="></script>
+    "q2wreZsE4Y6Y82flunxMBEItNrCva8pwX16f98kR0Fk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Uuga Shock - VRChat向け3Dモデル","description":"■この3Dモデルについて\n・恐竜型生物を模した置物です。\n\n■コンテンツについて\n・VRChatでの利用を想定した3Dモデルです。\n・アバター用の設定はされていません。\n・△ポリゴン数：5560, マテリアル数：2\n\n■シェーダーについて\n・whiteflare様のUnlit_WF_ShaderSuiteを同梱しています。\nhttps://github.com/whiteflare/Unlit_WF_ShaderSuite\n\n■お問い合わせ\nTwitter:@ugai_34","url":"https://booth.pm/ja/items/1352804","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/23840f3b-d94e-4725-8c42-f7a85f56d151/i/1352804/9acf8a80-057a-4838-8bf6-814395f536d6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="D8FNoLWduTzHc/SgYNRL3RU4i34IOugHJzfiuyWskZ8="></script>
+    nonce="q2wreZsE4Y6Y82flunxMBEItNrCva8pwX16f98kR0Fk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -471,9 +471,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
