--- a/VRChat/03/1353303.html
+++ b/VRChat/03/1353303.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "G2Uq3PLB3Lw6ut91HXgrDKzaAs2Hjt/p7o0I9Fd1YHU="></script>
+    "PtYbLV4clBXAsRw2+ZOuRt92bPmcmbJIZ2UGwEsoVvY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ルル","description":"オリジナルアバター【ルル】ver1.01\n\n\n夜空をイメージした女の子のルルちゃんです。\nぜひ可愛がってくださいー！\n\nこの子にぴったりなロゴはぜろりんさん(@sissyo40) に作っていただきました！\n\n\n制限があるわけではないですが、VRChatでアバターとして使用されることを想定しています\n\n\n【アップデート履歴】\nv1.01\n・ルルちゃん用にコピーしたRefrex Shader の名前が衝突する可能性があったので、別名に変更しました\n・素体入りFBXを同梱しました\n\n\n\n利用の注意\n\n◆商業利用について\n\n禁止事項に該当しない場合、可能です\n\n\n◆R-18・R-18Gへの利用について\n\n特に規制はありません。\n\n\n◆改変について\n\nデータの改変は自由です。\n\n\n◆著作権\n\n『ルル』に関係するこの配布データ及び改変したデータが持つ著作権は大元の製作者である『こおりみず』に帰属するものとします。\n\n\n◆禁止事項\n\nこのファイルに付属されている『ルル』のモデルデータ・テクスチャーデータそのままの再配付や販売はしないでください。\nある程度改変されたものについては大丈夫です。　大丈夫なのか心配でしたら『こおりみず』までご相談下さい。\n\n特定個人や団体への中傷を目的とした利用は禁止します。\n\n\n◆トラブルについて\n\n『こおりみず』は、本モデル『ルル』を使用したことによる金銭・機器・機会的トラブルの責任を一切負わないものとします。\n\nこの利用規約は予告なく変更・改定されることがあります。ご了承ください。","url":"https://booth.pm/ja/items/1353303","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8eae0ce3-7d8e-4436-9710-ea35a9636d4c/i/1353303/3b7b22d9-3d97-4f81-a82a-e387f91d67b2_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G2Uq3PLB3Lw6ut91HXgrDKzaAs2Hjt/p7o0I9Fd1YHU="></script>
+    nonce="PtYbLV4clBXAsRw2+ZOuRt92bPmcmbJIZ2UGwEsoVvY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -482,9 +482,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
