--- a/VRChat/92/1151092.html
+++ b/VRChat/92/1151092.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "7k4BelltIxUCQAm35Iek7H5bnGqWdsfjJfGEWQSsAH8="></script>
+    "JJqgdFmqHQWT2cFzYSwd0tVGmh02wChnZZ5mbB3ESH4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けオリジナル3Dモデル『NANAMI』","description":"VRChat対応3Dモデル NANAMI\n\n※仕様が古いため正常な動作を保証できません。ご自分で修正して使用できる方のみ自己責任でのご購入をお願いします。\n\n■更新履歴\n2018年12月27日　公開\n2019年5月30日\n・シェーダー設定の変更\n・素体メッシュ追加\n・アニメーションの追加\n・腕を伸びるように修正しました\n・マテリアルが４つになりました\n\n\n\n■概要\n\nVRChatでのアバター利用を想定して作られたモデルです。\n\n\nUnityPackageをインポート、Sceneファイルを開くだけでお手軽にアップロード準備できます(シェーダー、DynamicBone、VRC用アイトラッキング、リップシンクが自動であたります)\n\n\n●注意点\n事前にUnityのプロジェクト内に導入しておくもの\n・VRCSDK\n・DynamicBone\n・ユニティちゃんトゥーンシェーダー2.0.7.5\n\n各種シェイプキーはBodyメッシュに入っています\n\n\n動作確認はVRChatデスクトップモード､VR(WindowsMR)のみです。それ以外の環境での動作は保証できませんのでご了承ください\n\n■同梱データ\n・モデルデータ(fbx*2)\n\n・テクスチャ、matcap、ノーマルマップデータ(png*14)\n\n・まとめて導入用unitypackage(unitypackage*1)\n\n・Sceneファイル(unity*1)\n\n\n■利用規約\n・本データをご利用いただいた時点で利用規約に同意したものとみなします。\n\n・著作権は放棄していません。\n\n・配信、動画での商用利用は個人、法人に限らず可能です。\n\n・改変、改造は可能です(R18/R18G共に許可しますが自己責任でお願い致します)\n\n・本データの転載、再配布、ペデスタル利用を禁止します。(本データの一部を使用したもの不可)\n\n・宗教、政治活動での使用禁止します。\n\n■免責事項\n・本モデルに関連するファイルを使用して生じた不利益やトラブル等の一切の責任を負いません。\n\n\n・利用規約は予告なく変更・改定される事があります。\n\n\n\n■連絡先\nTwitter :　@killmachine1014","url":"https://booth.pm/ja/items/1151092","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/e1da7fe2-4e87-4ba0-85db-2a5eaedc6c78/i/1151092/5b265da9-ab1d-4d31-b554-a5f878660c33_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7k4BelltIxUCQAm35Iek7H5bnGqWdsfjJfGEWQSsAH8="></script>
+    nonce="JJqgdFmqHQWT2cFzYSwd0tVGmh02wChnZZ5mbB3ESH4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -437,9 +437,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
