--- a/VRChat/24/1151024.html
+++ b/VRChat/24/1151024.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "QRD8ocXehNj57wIPzo+ynUlV3hR524nYXcKPh6MoXvk="></script>
+    "thTBLr7o/2aahJ0xpXx1q2UwRq5b8hLtPUQRSL6+7kc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け３Dモデル「428ちゃん」","description":"・更新\n22/2/14\n　Idleアニメーションが割り当てられていなかった不具合を修正しました。\n　一部アニメーションを修正しました。\n\nVRChat向け３Dモデル「428ちゃん」です。\n\n\n！無料版と投げ銭用がありますが内容は同じものです！\n\n\nフルボディトラッキングでの動作は確認済み、無料で扱っていただくことが可能です。\nVRChatに使用する際は設定済みのprefabをそのままhierarchyに持っていくだけでアップロードが可能です。\n\nDLされたzipを解凍すると「Model」、「texture」、「VRCAvatarModel_428chan_Ver2018.unitypackage」、「readme」、「OLDVerFolder」、各PC版またはQuest版用のblenderファイルが同梱されています。\n\nこのモデルはVRChat向けに作られたものですが、ゲームの製作素材などにも\nご利用できます。また、モデル テクスチャなどの改変や\nバーチャルYouTuberなどの動画配信の演出など自由にご利用できます。\n\n\n本製品の二次配等は禁止しており、モデル改変後等の配布も同じく禁止します。\n\nPC版\n▽面数：9047\nテクスチャ枚数：2 枚\n（PC版はマスクテクスチャを使用しています。）\nメッシュオブジェクト数：1～6\n\n使用シェーダー：まんまるしぇーだー3\n\nQuest版\n▽面数：4902\nテクスチャ枚数：1\nメッシュオブジェクト数：1\n\n使用シェーダー：VRChat/Mobile/Toon Lit\n\nミニ428ちゃん\n▽面数：256\nテクスチャ枚数：1\nメッシュオブジェクト数：1\n\n使用シェーダー：VRChat/Mobile/Toon Lit\n\n・FBXについて\n「VRC_428chan_PC.fbx」「VRC_428chan_quest.fbx」はメッシュが一つに統合されたデータとなります。\n「VRC_428chan_PC_ALLMesh.fbx」は各パーツにメッシュが切り分けられた状態のデータとなります。\n「VRC_428chan_quest_ALLEarMesh.fbx」は耳パーツを選べるように切り分けられたデータとなります。\n「256pory428chan.fbx」は256ポリゴンで作られた428ちゃんのオマケデータとなります。\n\nVer2までのテクスチャの互換性はありません、ご了承ください。\n\n*写真3～4枚目は開発途中の写真です。","url":"https://booth.pm/ja/items/1151024","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/eac26deb-f8eb-4293-8010-904b0d088bf4/i/1151024/71e78ac1-5116-4e68-8af3-d24053b2a41e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QRD8ocXehNj57wIPzo+ynUlV3hR524nYXcKPh6MoXvk="></script>
+    nonce="thTBLr7o/2aahJ0xpXx1q2UwRq5b8hLtPUQRSL6+7kc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -565,9 +565,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
